--- a/backend/package.json
+++ b/backend/package.json
@@ -13,5 +13,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.13"
+  },
+  "scripts": {
+    "start": "node server/index.js",
+    "build": "cd client && npm install && npm run build"
   }
 }
